--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,26 @@
+* {
+  box-sizing:border-box;
+}
 h1 {
   color: rgb(42, 82, 42);
   text-align: center;
 }
+p {
+  text-align: center;
+}
 .column {
-  border:rgb(42, 82, 42);
-  border-width: 10px;
-  width: 300px;
-  margin-bottom: auto;
+  border:2px solid rgb(70, 70, 70);
+  width: 30%;
+  margin: 10px;
   float:left;
-  box-sizing:border-box;
 }
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
-.box{
-  border:rgb(42, 82, 42);
-  border-width: 10px;
-  margin-bottom: auto;
-  box-sizing:border-box;
-}
 img {
-  width: 80%;
+  width: 70%;
   float: left;
   margin: 10px;
 }
